--- a/app/src/main/res/layout/store_fragment_map.xml
+++ b/app/src/main/res/layout/store_fragment_map.xml
@@ -3,35 +3,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/margin_16dp">
-        <EditText
-            android:id="@+id/store_search"
+        android:layout_height="match_parent">
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="6dp"
-            android:background="@color/staples_white"
-            android:inputType="textPostalAddress"
-            android:imeOptions="actionSearch"
-            android:singleLine="true"/>
-        <ImageView
+            android:padding="@dimen/action_bar_half_margin"
+            android:layout_alignParentTop="true">
+            <EditText
+                android:id="@+id/store_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="@dimen/margin_16dp"
+                android:background="@color/staples_white"
+                android:inputType="textPostalAddress"
+                android:imeOptions="actionSearch"
+                android:singleLine="true"/>
+            <ImageButton
+                android:id="@+id/option_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingRight="@dimen/margin_16dp"
+                android:background="@color/staples_white"
+                android:src="@drawable/ic_view_list_black"/>
+        </LinearLayout>
+        <ImageButton
             android:id="@+id/store_here"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingRight="6dp"
+            style="@style/RoundButton"
+            android:background="@drawable/oval_white"
+            android:src="@drawable/ic_my_location_black"
+            android:layout_above="@+id/list"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="@dimen/margin_16dp"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
             android:background="@color/staples_white"
-            android:src="@drawable/ic_my_location_black"/>
-    </LinearLayout>
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_weight="1"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"/>
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="125dp"/>
+    </RelativeLayout>
 </app.staples.mobile.cfa.widget.AnimatorLayout>
