--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -45,6 +45,7 @@
             <TextView
                 android:id="@+id/open_time"
                 style="@style/StoreItem"
+                android:layout_width="wrap_content"
                 android:textColor="@color/staples_green"
                 android:layout_gravity="right"/>
             <LinearLayout
@@ -59,114 +60,47 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_phone_black"/>
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="wrap_content"/>
-                <ImageView
                     android:id="@+id/directions"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
                     android:src="@drawable/ic_directions_black"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <!--horizontal rule 1 -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/staples_middle_gray"/>
-
     <LinearLayout
         android:id="@+id/store_detail_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <!--&lt;!&ndash;phone number&ndash;&gt;-->
-        <!--<RelativeLayout-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:paddingLeft="6dp"-->
-            <!-->-->
-            <!--<TextView-->
-                <!--android:id="@+id/phone2_label"-->
-                <!--android:layout_gravity="left"-->
-                <!--style="@style/GraySubheading"-->
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:layout_alignParentLeft="true"-->
-                <!--android:text="@string/phone"/>-->
-            <!--<TextView-->
-                <!--android:id="@+id/phone2"-->
-                <!--android:layout_below="@id/phone2_label"-->
-                <!--android:layout_alignParentLeft="true"-->
-                <!--style="@style/StoreItem"/>-->
-            <!--<ImageView-->
-                <!--android:id="@+id/call_store2"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginRight="6dp"-->
-                <!--android:layout_centerVertical="true"-->
-                <!--android:layout_alignParentRight="true"-->
-                <!--android:src="@drawable/ic_phone_black"/>-->
-        <!--</RelativeLayout>-->
-
-
-        <!--horizontal rule 2 -->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/staples_middle_gray"/>
-
+        android:orientation="vertical"
+        android:background="@color/staples_middle_gray">
         <!--store hours-->
         <TextView
-            android:layout_gravity="left"
             style="@style/GraySubheading"
-            android:paddingLeft="6dp"
-            android:text="@string/store_hours"/>
+            android:layout_marginTop="1dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="@dimen/margin_16dp"
+            android:text="@string/store_hours"
+            android:background="@color/staples_white"/>
         <TextView
             android:id="@+id/store_schedule"
-            android:paddingLeft="6dp"
-            style="@style/StoreItem"/>
-
-        <!--horizontal rule 3-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/staples_middle_gray"/>
-
-        <TextView
-            android:id="@+id/weekly_ad_link2"
             style="@style/StoreItem"
-            android:paddingLeft="6dp"
-            android:text="@string/weekly_ad_title"
-            android:textColor="@color/staples_red"/>
-
-        <!--horizontal rule 4-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/staples_middle_gray"/>
-
+            android:paddingLeft="@dimen/margin_16dp"
+            android:paddingBottom="8dp"
+            android:background="@color/staples_white"/>
         <!--store features-->
         <TextView
-            android:layout_gravity="left"
             style="@style/GraySubheading"
-            android:paddingLeft="6dp"
-            android:text="@string/store_features"/>
+            android:layout_marginTop="1dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="@dimen/margin_16dp"
+            android:text="@string/store_features"
+            android:background="@color/staples_white"/>
         <TextView
             android:id="@+id/store_features"
-            android:layout_alignParentLeft="true"
             style="@style/StoreItem"
-            android:paddingLeft="6dp"
-            android:layout_marginBottom="16dp"
-            />
-
+            android:paddingLeft="@dimen/margin_16dp"
+            android:paddingBottom="16dp"
+            android:background="@color/staples_white"/>
     </LinearLayout>
-
 </LinearLayout>
