--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -38,7 +38,7 @@
         style="@style/ActionBarTextStyle"
         android:layout_gravity="center_vertical|right"/>
     <ImageView
-        android:id="@+id/option_icon"
+        android:id="@+id/view_list"
         style="@style/ActionBarIconStyle"
         android:layout_gravity="center_vertical|right"
         android:src="@drawable/ic_search_black"/>
