--- a/app/src/main/res/layout/store_fragment_map.xml
+++ b/app/src/main/res/layout/store_fragment_map.xml
@@ -19,6 +19,12 @@
             android:orientation="horizontal"
             android:padding="@dimen/action_bar_half_margin"
             android:layout_alignParentTop="true">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingLeft="@dimen/margin_16dp"
+                android:background="@color/staples_white"
+                android:src="@drawable/ic_search_black"/>
             <app.staples.mobile.cfa.widget.PlaceFieldView
                 android:id="@+id/store_search"
                 android:layout_width="0dp"
