--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -22,13 +22,13 @@
             style="@style/SmallProductTitle"
             android:layout_marginRight="@dimen/margin_16dp"/>
         <TextView
-            android:id="@+id/overweight"
+            android:id="@+id/heavyweight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/fontsize_12sp"
             android:paddingLeft="@dimen/left_margin"
             android:paddingRight="@dimen/right_margin"
-            android:text="@string/overweight"
+            android:text="@string/heavyweight"
             android:textColor="@color/staples_white"
             android:background="@color/staples_green"/>
         <TextView
@@ -38,7 +38,7 @@
             android:textSize="@dimen/fontsize_12sp"
             android:paddingLeft="@dimen/left_margin"
             android:paddingRight="@dimen/right_margin"
-            android:text="@string/add_on"
+            android:text="@string/addon"
             android:textColor="@color/staples_white"
             android:background="@color/staples_green"/>
         <app.staples.mobile.cfa.widget.PriceSticker
