--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -117,7 +117,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/fontsize_16sp"
-                android:text="@string/overweight_warning"
+                android:text="@string/heavyweight_warning"
                 android:layout_marginLeft="@dimen/sku_padding_10"
                 android:layout_marginRight="@dimen/sku_padding_10"
                 android:visibility="gone"/>
@@ -137,7 +137,7 @@
                     android:paddingBottom="@dimen/sku_padding_2"
                     android:gravity="left"
                     android:textSize="@dimen/fontsize_16sp"
-                    android:text="@string/add_on"
+                    android:text="@string/addon"
                     android:textColor="@color/staples_white"
                     android:background="@drawable/rounded_corner_green"/>
                 <TextView
@@ -146,7 +146,7 @@
                     android:layout_marginRight="@dimen/sku_padding_10"
                     android:textSize="@dimen/fontsize_16sp"
                     android:gravity="center_vertical|left"
-                    android:text="@string/add_on_warming"
+                    android:text="@string/addon_warning"
                     android:paddingLeft="@dimen/sku_padding_5"
                     android:paddingTop="@dimen/sku_padding_2"
                     android:paddingBottom="@dimen/sku_padding_2"/>
