--- a/app/src/main/res/layout/store_fragment_map.xml
+++ b/app/src/main/res/layout/store_fragment_map.xml
@@ -36,7 +36,8 @@
                 android:imeOptions="actionSearch"
                 android:singleLine="true"
                 app:searchTypes="(regions)"
-                app:manualPrompt="@string/input_manually_allcaps"/>
+                app:manualPrompt="@string/input_manually_allcaps"
+                app:dualHint=""/>
             <ImageButton
                 android:id="@+id/view_list"
                 android:layout_width="wrap_content"
