--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -103,10 +103,10 @@
         <item name="android:textSize">@dimen/fontsize_15sp</item>
         <item name="android:textColor">@color/staples_black</item>
         <item name="android:imeOptions">flagNoExtractUi</item>
-        <item name="textDualSize">@dimen/fontsize_12sp</item>
         <item name="android:singleLine">true</item>
-        <item name="textDualGap">1dp</item>
-        <item name="textDualColor">@color/staples_dark_gray</item>
+        <item name="dualSize">@dimen/fontsize_12sp</item>
+        <item name="dualGap">1dp</item>
+        <item name="dualColor">@color/staples_dark_gray</item>
     </style>
 
     <style name="RoundButton">
