--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,7 +56,7 @@
     <style name="SortOptionStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">32sp</item>
-        <item name="android:paddingLeft">@dimen/action_bar_half_margin</item>
+        <item name="android:paddingLeft">@dimen/radio_padding</item>
         <item name="android:paddingRight">@dimen/action_bar_half_margin</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:button">@drawable/radio_button_white</item>
