--- a/app/src/main/res/layout/place_suggest_item.xml
+++ b/app/src/main/res/layout/place_suggest_item.xml
@@ -5,4 +5,6 @@
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:gravity="center_vertical"
-    android:padding="10dp"/>
+    android:paddingLeft="@dimen/search_horizontal_offset"
+    android:paddingTop="@dimen/verticalspacing_8dp"
+    android:paddingBottom="@dimen/verticalspacing_8dp"/>
