--- a/app/src/main/res/layout/store_fragment_map.xml
+++ b/app/src/main/res/layout/store_fragment_map.xml
@@ -37,7 +37,9 @@
                 android:singleLine="true"
                 app:searchTypes="(regions)"
                 app:manualPrompt="@string/input_manually_allcaps"
-                app:dualHint=""/>
+                app:dualHint=""
+                android:dropDownWidth="match_parent"
+                android:dropDownHorizontalOffset="@dimen/search_negative_horizontal_offset" />
             <ImageButton
                 android:id="@+id/view_list"
                 android:layout_width="wrap_content"
@@ -63,6 +65,7 @@
         android:visibility="gone">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
+            android:elevation="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/staples_white"
