--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -34,11 +34,13 @@
                 android:textColor="@color/staples_red"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_weight="1">
             <TextView
                 android:id="@+id/distance"
+                android:paddingTop="12dp"
                 style="@style/StoreItem"
                 android:gravity="right"/>
             <TextView
